# GameOfLife

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: constants.h  game.h  user_ui.h
src/: CMakeLists.txt  game.cpp  user_ui.cpp  user_ui_before.cpp  user_ui_kokeilu.cpp
tests/: CMakeLists.txt  CmakeLists.txt  unit_tests.cpp  unit_tests_results
